# minesweeper

./: .dockerfile.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  README.md  benchmark.yaml  default.pgo  glide.yaml  go.mod  go.sum  main.go  minesweeper  minesweeper.go  printer.go  utils.go
field/: field.go  space.go  state.go  utils.go
matrix/: cell.go  matrix.go  row.go
sim/: field.go  square.go  utils.go
solver/: matrix.go  move.go  solver.go  solver_test.go
solvers/: primary.go  secondary.go  utils.go
src/: lib.rs  main.rs
src/field/: error.rs  field.rs  mod.rs  space.rs  space_idx.rs  state.rs
src/matrix/: cell.rs  matrix.rs  mod.rs  row.rs
src/solver/: mod.rs  move_type.rs  solver.rs  tests.rs
