[package]
name = "minesweeper"
version = "2.0.0"
edition = "2024"

[dependencies]
rand = "0.8"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
smallvec = "1.13"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.release-pgo]
inherits = "release"

[profile.bench-pgo]
inherits = "release"
